Adicionado botão de adição de listas

--- a/src/pages/HomePage/index.css
+++ b/src/pages/HomePage/index.css
@@ -19,6 +19,10 @@
   font-size: 1.5em;
 }
 
+.App-panel {
+  padding: 15px;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
